# prime_numbers

./: .gitignore  pyproject.toml
src/prime_numbers/: __init__.py  prime_crible.py  prime_sieve.py
tests/: correctness_test.py  crible_test.py  save_test.py  sieve_test.py  speed_test.py
